# camsenseX1-operation-test

./: .gitignore  pyproject.toml  settings-template.json
browser/: index.html
browser/css/: index.css
browser/js/: index.js
src/: capture.py  main.py
